kubernetes/config/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: api
          image: ghcr.io/anon-r-7/hebrew-calendar-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          command: ["/bin/sh"]
          args: ["-c", "export DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_ENDPOINT}:${POSTGRES_PORT}/${POSTGRES_DB} && exec node dist/index.js"]
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - >
                nc -z -w 5 db 5432 || exit 1
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always

# yarn db:migrate && node dist/index.js
