kubernetes/config/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ui
    spec:
      # imagePullSecrets:
        # - name: ghcr-credentials
      containers:
        - env:
            - name: UI_API_URL
              value: "http://161.35.253.47:8080"
          # image: docker.io/ryanostrom/ara-dev-ui:latest
          image: ghcr.io/anon-r-7/hebrew-feasts-ui:latest
          imagePullPolicy: Always
          name: ui
          ports:
            - containerPort: 80
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
      restartPolicy: Always
