kubernetes/config/ui-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
