kubernetes/config/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: ui
