kubernetes/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hebrewfeasts-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "api.hebrewfeasts.com"
    - "hebrewfeasts.com"
    secretName: hebrewfeasts-tls
  rules:
  - host: "api.hebrewfeasts.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
  - host: "hebrewfeasts.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
